@@ -1,2 +1,2 @@
-<http://example.org/eg#s> <http://example.org/eg#p> "\u000C first" .
-<http://example.org/eg#s> <http://example.org/eg#p> "last \u000C" .
+<http://example.org/eg#s> <http://example.org/eg#p> "\f first" .
+<http://example.org/eg#s> <http://example.org/eg#p> "last \f" .
