@@ -1,4 +1,4 @@
 @prefix eg: <http://example.org/> .
 
 eg:s
-	eg:p "\u0000\u0001\u0002\u0003\u0004\u0005\u0006\u0007\b\t\u000B\f\u000E\u000F\u0010\u0011\u0012\u0013\u0014\u0015\u0016\u0017\u0018\u0019\u001A\u001B\u001C\u001D\u001E\u001F\\\u007F" .
+	eg:p "\u0000\u0001\u0002\u0003\u0004\u0005\u0006\u0007\b	\u000B\f\u000E\u000F\u0010\u0011\u0012\u0013\u0014\u0015\u0016\u0017\u0018\u0019\u001A\u001B\u001C\u001D\u001E\u001F\\\u007F" .
