@@ -417,7 +417,7 @@ test_suites = {
     ns_w3 + 'NQuadsTests/',
     '--',
     ['-I', 'NQuads'],
-    ['-O', 'ascii'],
+    ['-O', 'escaped'],
     ['-k', '8192'],
   ],
   'ntriples': [
@@ -425,7 +425,7 @@ test_suites = {
     ns_w3 + 'NTriplesTests/',
     '--',
     ['-I', 'NTriples'],
-    ['-O', 'ascii'],
+    ['-O', 'escaped'],
     ['-k', '1024'],
   ],
   'trig': [
@@ -433,7 +433,7 @@ test_suites = {
     ns_w3 + 'TriGTests/',
     '--',
     ['-I', 'TriG'],
-    ['-O', 'ascii'],
+    ['-O', 'escaped'],
     ['-k', '1024'],
   ],
   'turtle': [
@@ -441,7 +441,7 @@ test_suites = {
     ns_w3 + 'TurtleTests/',
     '--',
     ['-I', 'Turtle'],
-    ['-O', 'ascii'],
+    ['-O', 'escaped'],
     ['-k', '1024'],
   ],
 
@@ -473,7 +473,7 @@ test_suites = {
     files('extra/good/manifest.ttl'),
     ns_serdtest + 'good/',
     '--',
-    ['-O', 'ascii'],
+    ['-O', 'escaped'],
     ['-b', '1'],
     ['-k', '16384'],
   ],
@@ -504,7 +504,7 @@ test_suites = {
     files('extra/good/manifest.ttl'),
     ns_serdtest + 'good/',
     '--',
-    ['-O', 'ascii'],
+    ['-O', 'escaped'],
     ['-k', '16384'],
   ],
   'lax_lax': [
